# Sentinel

./: .gitignore  README.md  Sentinel.sln
Sentinel.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Sentinel.App.csproj
Sentinel.App/Converters/: BoolToVisibilityConverter.cs  BytesToSizeConverter.cs  SeverityToColorConverter.cs  StringToVisibilityConverter.cs  UsageFormatConverter.cs
Sentinel.App/Infrastructure/: AsyncRelayCommand.cs  Debouncer.cs  DispatcherHelper.cs  IAsyncCommand.cs  INavigationService.cs  IRefreshable.cs  LiveReadingsState.cs  NavigationService.cs
Sentinel.App/Pages/: HistoryPage.xaml  HistoryPage.xaml.cs  OverviewPage.xaml  OverviewPage.xaml.cs  ProcessesPage.xaml  ProcessesPage.xaml.cs  ServicesPage.xaml  ServicesPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  StartupPage.xaml  StartupPage.xaml.cs  ToolsPage.xaml  ToolsPage.xaml.cs  ZeroTracePage.xaml  ZeroTracePage.xaml.cs
Sentinel.App/ViewModels/: HistoryEntry.cs  HistoryViewModel.cs  OverviewViewModel.cs  ProcessGroupViewModel.cs  (+7 more)
Sentinel.Core/: Sentinel.Core.csproj
Sentinel.Platform/: Sentinel.Platform.csproj
Sentinel.Tests/: AnalyzerServiceTests.cs  Sentinel.Tests.csproj
docs/: architecture.md  data-schema.md  ui-styleguide.md
scripts/: build.ps1  format.ps1
sentinel/: README.md
sentinel/src-tauri/: Cargo.toml  tauri.conf.json
sentinel/src-tauri/capabilities/: default.json
sentinel/src-tauri/src/: ipc.rs  lib.rs  state.rs
sentinel/src-tauri/src/commands/: analyzer.rs  mod.rs  process.rs  services.rs  startup.rs  trust.rs
(+68 files in other folders)
