[package]
name = "sentinel"
version = "0.1.0"
description = "Sentinel portable desktop app"
authors = ["Sentinel Team"]
edition = "2021"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sentinel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
zip = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
